aggiunte keyword di ricerca e modificate descrizione e intestazione

--- a/index.html
+++ b/index.html
@@ -1,38 +1,35 @@
 <!DOCTYPE html>
-<!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
-<!--[if !IE]><!-->
-<html lang="en">
-<!--<![endif]-->
+<html lang="it">
 	<head>
-		<meta charset="utf-8">
-		<title>Boutique bella abbigliamento donna a Torino  Atmosphere Ocassion Chanttal</title>
-		<meta name="description" content="Boutique Bella abbigliamento Atmosphere Ocassion Chanttal a Torino">
-		<!-- <meta name="author" content="htmlcoder.me"> -->
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta name="keywords" content="boutiquebella, boutique bella, torino, atmosphere, ocassion, chanttal, moda donna, abbigliamento, calzature, scarpe, fashion, glamour, tacchi alti, abiti da sera, jeans" />
+		<title>boutiquebella.it - abbigliamento e calzature donna a Torino Atmosphere Ocassion Chanttal</title>
+		<meta name="description" content="Boutique bella veste con stile ed eleganza ogni donna. Punto vendita a Torino. Abbigliamento e scarpe Atmosphere, Ocassion e Chanttal a Torino" />
 
 		<!-- Mobile Meta -->
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 		<!-- Favicon -->
-		<link rel="shortcut icon" href="images/favicon.ico">
+		<link rel="shortcut icon" href="images/favicon.ico" />
 
 		<!-- Web Fonts -->
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Raleway:700,400,300' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css' />
+		<link href='http://fonts.googleapis.com/css?family=Raleway:700,400,300' rel='stylesheet' type='text/css' />
 
 		<!-- Bootstrap core CSS -->
-		<link href="bootstrap/css/bootstrap.css" rel="stylesheet">
+		<link href="bootstrap/css/bootstrap.css" rel="stylesheet" />
 
 		<!-- Font Awesome CSS -->
-		<link href="fonts/font-awesome/css/font-awesome.css" rel="stylesheet">
+		<link href="fonts/font-awesome/css/font-awesome.css" rel="stylesheet" />
 
 		<!-- Plugins -->
-		<link href="css/animations.css" rel="stylesheet">
+		<link href="css/animations.css" rel="stylesheet" />
 
 		<!-- Worthy core CSS file -->
-		<link href="css/style.css" rel="stylesheet">
+		<link href="css/style.css" rel="stylesheet" />
 
 		<!-- Custom css --> 
-		<link href="css/custom.css" rel="stylesheet">
+		<link href="css/custom.css" rel="stylesheet" />
 		
 		<link href="css/media.css" rel="stylesheet" type="text/css" />
 	</head>
@@ -55,7 +52,7 @@
 							<!-- name-and-slogan -->
 							<div class="site-name-and-slogan smooth-scroll">
 								<div class="site-name"><a href="#home">Boutique Bella</a></div>
-								<div class="site-slogan">Abbigliamento donna Atmosphere, Ocassion e Chanttal a Torino di <a target="_blank" href="https://www.facebook.com/blaj.arabela.5?ref=ts&fref=ts">Arabela Blaj</a></div>
+								<div class="site-slogan">Abbigliamento donna Atmosphere, Ocassion e Chanttal a Torino</div>
 							</div>
 
 						</div>
