aggiunti meta tag og title description site_name

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="keywords" content="boutiquebella, boutique bella, torino, atmosphere, ocassion, chanttal, moda donna, abbigliamento, calzature, scarpe, fashion, glamour, tacchi alti, abiti da sera, jeans" />
 		<title>boutiquebella.it - abbigliamento e calzature donna a Torino Atmosphere Ocassion Chanttal</title>
-		<meta name="description" content="Boutique bella veste con stile ed eleganza ogni donna. Punto vendita a Torino. Abbigliamento e scarpe Atmosphere, Ocassion e Chanttal a Torino" />
+		<meta name="description" content="Boutique bella veste con stile ed eleganza ogni donna. Punto vendita a Torino. Abbigliamento e scarpe Atmosphere, Ocassion e Chanttal" />
+		<meta property="og:title" content="Boutique bella"/>
+		<meta property="og:description" content="Boutique bella veste con stile ed eleganza ogni donna. Punto vendita a Torino. Abbigliamento e scarpe Atmosphere, Ocassion e Chanttal"/>
+		<meta property="og:site_name" content="Boutique bella"/>
 
 		<!-- Mobile Meta -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
