inserita la pagina facebook corretta

--- a/index.html
+++ b/index.html
@@ -925,7 +925,7 @@
 						<div class="col-sm-6">
 							<div class="footer-content">
 								<ul class="social-links">
-									<li class="facebook">Seguici sulla pagina <a target="_blank" href="https://www.facebook.com/pages/HtmlCoder/714570988650168"><i class="fa fa-facebook">acebook Boutiquebella</i></a></li>
+									<li class="facebook">Seguici sulla pagina <a target="_blank" href="https://www.facebook.com/boutiquebellatorino"><i class="fa fa-facebook">acebook Boutiquebella</i></a></li>
 									<!-- <li class="twitter"><a target="_blank" href="https://twitter.com/HtmlcoderMe"><i class="fa fa-twitter"></i></a></li> -->
 									<!-- <li class="googleplus"><a target="_blank" href="http://plus.google.com"><i class="fa fa-google-plus"></i></a></li> -->
 									<!-- <li class="skype"><a target="_blank" href="http://www.skype.com"><i class="fa fa-skype"></i></a></li> -->
