aggiunta icona whatsapp

--- a/index.html
+++ b/index.html
@@ -916,7 +916,8 @@
 								<ul class="list-icons">
 									<li><i class="fa fa-map-marker pr-10"></i>Via Dante Di Nanni 11, 10138 Torino</li>
 									<li><i class="fa fa-phone pr-10"></i>0113726344</li>
-									<li><i class="glyphicon glyphicon-phone pr-10"></i>3662649139</li>
+									<!--<li><i class="glyphicon glyphicon-phone pr-10"></i>3662649139</li>-->
+									<li><i class="whatsapp"></i>3662649139</li>
 									<!-- <li><i class="fa fa-fax pr-10"></i>+3933312345678</li> -->
 									<li><i class="fa fa-envelope-o pr-10"></i>arabela616@gmail.com</li>
 								</ul>
