rimosso countdown e corretto puntamento alle sezioni

--- a/index.html
+++ b/index.html
@@ -102,29 +102,6 @@
 									</div>
 								</nav>
 								<!-- navbar end -->
-						<div id="countdown" class="countdown">
-						    
-						    <div id="timer" data-animated="FadeIn">
-							<p id="message" class="large"></p>
-							<div id="days" class="timer_box"></div>
-							<div id="hours" class="timer_box"></div>
-							<div id="minutes" class="timer_box"></div>
-							<div id="seconds" class="timer_box"></div>
-						    </div>
-						    <!--
-						    <div class="col-lg-4 col-lg-offset-4 mt centered">
-							<h4>Vuoi ricevere tutte le novita'</h4>
-							<form class="form-inline" role="form">
-							    <div class="form-group">
-								<label class="sr-only" for="exampleInputEmail2">Email address</label>
-								<input type="email" class="form-control" id="exampleInputEmail2" placeholder="Enter email">
-							    </div>
-							    <button type="submit" class="btn btn-info">Submit</button>
-							</form>            
-						    </div>
-						    -->
-						</div>
-
 							</div>
 							<!-- main-navigation end -->
 
@@ -173,11 +150,11 @@
 
 		<!-- section start -->
 		<!-- ================ -->
-		<div id="novita" class="section bg-image-1">
+		<div class="section bg-image-1">
 		    <div class="row text-center">
 			<h1>Novità</h1>
 		    </div>
-		    <div  class="row" data-animation-effect="fadeIn">
+		    <div id="novita" class="row" data-animation-effect="fadeIn">
 			<div class="col-md-12" id="slider">
 			    <div class="col-md-16" id="carousel-bounding-box">
 				<div id="myCarousel" class="carousel slide">
@@ -665,11 +642,11 @@
 	
 		<!-- section start -->
 		<!-- ================ -->
-		<div id="marchi" class="section bg-image-1">
+		<div class="section bg-image-1">
 		    <div class="row text-center">
 			  <h1>Marchi</h1>
 		    </div>
-		    <div class="row" data-animation-effect="fadeIn">
+		    <div id="marchi" class="row" data-animation-effect="fadeIn">
 			    <div class="col-md-12">
 
 				    <!-- isotope filters start
@@ -985,9 +962,6 @@
 
 		<!-- Initialization of Plugins -->
 		<script type="text/javascript" src="js/template.js"></script>
-		
-		<!-- Initialization jquery countdown plugins -->
-		<script src="js/countdown.js"></script>
 		
 		<!-- google api -->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
