aggiunto link profilo facebook e link attualmente non gestiti

--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
 							<!-- name-and-slogan -->
 							<div class="site-name-and-slogan smooth-scroll">
 								<div class="site-name"><a href="#home">Boutique Bella</a></div>
-								<div class="site-slogan">Abbigliamento donna Atmosphere, Ocassion e Chanttal a Torino</div>
+								<div class="site-slogan">Abbigliamento donna Atmosphere, Ocassion e Chanttal a Torino
+								<a target="_blank" href="https://www.facebook.com/boutiqbella"><p class="social">Seguici su Facebook boutiqbella</p></a>
+								</div>
 							</div>
 
 						</div>
@@ -666,7 +668,7 @@
 						    <div class="image-box">
 							    <div class="overlay-container">
 								    <img src="images/atmosphere-logo.jpg" alt="" class="center-block">
-								    <a class="overlay" data-toggle="modal" data-target="#project-1">
+								    <a class="overlay" data-toggle="modal"> <!-- data-target="#project-1"> -->
 									    <i class="fa fa-search-plus"></i>
 									    <span>Atmosphere</span>
 								    </a>
@@ -707,7 +709,7 @@
 						    <div class="image-box">
 							    <div class="overlay-container">
 								    <img src="images/chanttal-logo.jpg" alt="" class="center-block">
-								    <a class="overlay" data-toggle="modal" data-target="#project-1">
+								    <a class="overlay" data-toggle="modal"> <!-- data-target="#project-1"> -->
 									    <i class="fa fa-search-plus"></i>
 									    <span>Chanttal</span>
 								    </a>
@@ -760,7 +762,7 @@
 						    <div class="image-box">
 							    <div class="overlay-container">
 								    <img src="images/ocassion-logo.jpg" alt="" class="center-block">
-								    <a class="overlay" data-toggle="modal" data-target="#project-1">
+								    <a class="overlay" data-toggle="modal"> <!-- data-target="#project-1"> -->
 									    <i class="fa fa-search-plus"></i>
 									    <span>Ocassion</span>
 								    </a>
@@ -903,7 +905,8 @@
 						<div class="col-sm-6">
 							<div class="footer-content">
 								<ul class="social-links">
-									<li class="facebook">Seguici sulla pagina <a target="_blank" href="https://www.facebook.com/boutiquebellatorino"><i class="fa fa-facebook">acebook Boutiquebella</i></a></li>
+									<li class="facebook">Profilo <a target="_blank" href="https://www.facebook.com/boutiqbella"><i class="fa fa-facebook">acebook Boutiqbella</i></a></li>
+									<li class="facebook">Seguici sulla pagina <a target="_blank" href="https://www.facebook.com/boutiqbella"><i class="fa fa-facebook">acebook Boutiquebella</i></a></li>
 									<!-- <li class="twitter"><a target="_blank" href="https://twitter.com/HtmlcoderMe"><i class="fa fa-twitter"></i></a></li> -->
 									<!-- <li class="googleplus"><a target="_blank" href="http://plus.google.com"><i class="fa fa-google-plus"></i></a></li> -->
 									<!-- <li class="skype"><a target="_blank" href="http://www.skype.com"><i class="fa fa-skype"></i></a></li> -->
